fix: overflow style

--- a/src/components/doit/DoitCard/index.module.scss
+++ b/src/components/doit/DoitCard/index.module.scss
@@ -8,10 +8,16 @@
 
 .name {
   margin: 0.2em;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .description {
   margin: 0.2em;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .labelBadgesContainer {
